Fixed filter presentation on small screens (#3346)
Fixed filter presentation on small screen. It is close by default and
filters options will show when **filters** button is clicked.

Closes #3345

--- a/hypha/static_src/src/sass/apply/components/_filters.scss
+++ b/hypha/static_src/src/sass/apply/components/_filters.scss
@@ -61,3 +61,9 @@
         background: transparent;
     }
 }
+// stylelint-disable selector-max-id
+#show-filters-button {
+    @include media-query(tablet-landscape) {
+        display: none;
+    }
+}
